tests/compile_fail/invalid_size_attr.stderr
error: expected attribute arguments in parentheses: #[size(...)]
 --> tests/compile_fail/invalid_size_attr.rs:5:10
  |
5 | #[derive(ShaderType)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ShaderType` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected u32 literal
 --> tests/compile_fail/invalid_size_attr.rs:9:11
  |
9 |     #[size()]
  |           ^^

error: expected u32 literal
  --> tests/compile_fail/invalid_size_attr.rs:11:11
   |
11 |     #[size(invalid)]
   |           ^^^^^^^^^

error: expected u32 literal or `runtime` identifier
  --> tests/compile_fail/invalid_size_attr.rs:13:11
   |
13 |     #[size(-1)]
   |           ^^^^
